<resources>
    <string name="app_name">Quiz Monkey</string>
    <string name="production">Monkey Crew Production</string>
    <string name="name_id">Name</string>
    <string name="home">Hem</string>
    <string name="play">Spela</string>
    <string name="back">Tillbaka</string>
    <string name="info">Info</string>
    <string name="highscores">Rekord</string>
    <string name="settings">Inställningar</string>
    <string name="head">GRUPP FYRAS QUIZ APP!!!</string>
    <string name="main_menu_play">S p e l a</string>
    <string name="main_menu_profiles">Profiler</string>
    <string name="main_menu_settings">Inställningar</string>
    <string name="chooseCategories">Välj kategori(er)</string>
    <string name="start_game">Starta spel</string>
    <string name="question_head">Fråga: </string>
    <string name="continue_main">Fortsätt</string>
    <string name="profiles">Profiler</string>
    <string name="add_name">Lägg till namn..</string>
    <string name="create_profile">Skapa profil!</string>
    <string name="highscore">Rekord</string>
    <string name="game_results">Resultat för rundan</string>
    <string name="player">Spelare:</string>
    <string name="played_category">Spelad kategori:</string>
    <string name="points_game">Poäng för rundan:</string>
    <string name="highScore_player">Spelares rekord:</string>
    <string name="about">Om appen</string>
    <string name="reset_all_high_score">Återställ ditt rekord</string>
    <string name="remove_current_profile">Ta bort aktuell profil</string>
    <string name="add_question">Lägg till fråga</string>
    <string name="remove_question">Ta bort fråga</string>
    <string name="question">Frågan:</string>
    <string name="choice_1">Svarsalternativ 1:</string>
    <string name="choice_2">Svarsalternativ 2:</string>
    <string name="choice_3">Svarsalternativ 3:</string>
    <string name="right_answer">Rätt alternativ:</string>
    <string name="quit_app">Avsluta app</string>
    <string name="you_need_to_choose_category">Du måste välja kategori!</string>
    <string name="category_F"><![CDATA[Film & TV]]></string>
    <string name="category_H">Historia</string>
    <string name="category_M">Musik</string>
    <string name="category_D">Diverse</string>
    <string name="all_categories">Alla kategorier</string>
    <string name="my_questions">Mina frågor</string>

    <string name="chooseCategory">Välj kategori:</string>
    <string name="score">POÄNG: </string>
    <string name="play_again">Spela Igen</string>
    <string name="to_menu">Till Meny</string>
    <string name="to_highscore">Till Rekord</string>
    <string name="personal_highscore">Highscore</string>
    <string name="time">TID</string>
    <string name="correct_answers">Antal rätt:</string>
    <string name="time_played">Tid för rundan:</string>

    <string-array name="categories">
        <item>Film &amp; TV</item>
        <item>Historia</item>
        <item>Musik</item>
        <item>Diverse</item>
    </string-array>

</resources>
