<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jakobhaglof.quizapp.SettingsActivity">

    <TextView
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textColor="@color/textColorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/monkey" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

    <Button
        android:id="@+id/settings_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/backgroundrede"
        android:text="@string/about"
        android:layout_marginBottom="10dp"
        android:onClick="sendToAbout"/>

    <Button
        android:id="@+id/settings_reset_high_score"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/settings_about"
        android:background="@drawable/backgroundrede"
        android:text="@string/reset_all_high_score"
        android:layout_marginBottom="10dp"
        android:onClick="resetHighScore"/>

    <Button
        android:id="@+id/settings_remove_current_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/settings_reset_high_score"
        android:background="@drawable/backgroundrede"
        android:text="@string/remove_current_profile"
        android:layout_marginBottom="10dp"
        android:onClick="removeCurrentProfile"
        />

    <Button
        android:id="@+id/settings_add_question"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/settings_remove_current_profile"
        android:background="@drawable/backgroundrede"
        android:text="@string/add_question"
        android:layout_marginBottom="10dp"
        android:onClick="sendToAddQuestion"/>

    <Button
        android:id="@+id/settings_remove_question"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/settings_add_question"
        android:background="@drawable/backgroundrede"
        android:text="@string/remove_question"
        android:layout_marginBottom="10dp"
        android:onClick="SendToRemoveQuestion"/>

        </RelativeLayout>

</RelativeLayout>
