<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jakobhaglof.quizapp.PostGameActivity">

    <TextView
        android:id="@+id/Post_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/game_results"
        android:textColor="@color/textColorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <View
        android:id="@+id/post_game_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/Post_game"
        android:layout_marginBottom="40dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/name_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_game_line">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/player"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/writePlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/textColorBlack" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/played_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_player"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/played_category"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/writePlayedCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/textColorBlack" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/points_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/played_category"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/points_game"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/writePointsGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/textColorBlack" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/highScore_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/points_game"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/highScore_player"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/writePlayerHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/textColorBlack" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/playAgainBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/backgroundrede"
            android:onClick="sendToGameSettings"
            android:text="@string/play_again" />

        <Button
            android:id="@+id/toMenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/backgroundrede"
            android:onClick="sendToMain"
            android:text="@string/to_menu" />

        <Button
            android:id="@+id/toHighscore"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/backgroundrede"
            android:onClick="sendToHighScore"
            android:text="@string/to_highscore" />
    </LinearLayout>

</RelativeLayout>
