<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jakobhaglof.quizapp.AddQuestionActivity">

    <TextView
        android:id="@+id/Add_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_question"
        android:textColor="@color/textColorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/add_question_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/Add_question"
        android:background="@android:color/white"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:id="@+id/new_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_question_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/get_new_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack"
            android:hint="fråga..."/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_question">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseCategory"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <Spinner
            android:id="@+id/get_new_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/choice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_category">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_1"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/get_choice_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/choice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_2"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/get_choice_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/choice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_3"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/get_choice_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/choice4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Svarsalternativ 4:"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/get_choice_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_answer"
            android:textColor="@color/textColorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/get_right_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_question_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/backgroundrede"
        android:onClick="addQuestion"
        android:text="@string/add_question" />

</RelativeLayout>
